agent9527-rs/tui/src/status/snapshots/agent9527_tui__status__tests__status_snapshot_uses_default_reasoning_when_config_empty.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  ⣰⣭⣆ Agent9527 (v20260727.3.0)                                               │
│                                                                              │
│ Visit https://chatgpt.com/settings/usage for up-to-date information on rate  │
│ limits and credits                                                           │
│                                                                              │
│  Remote:           unix:///tmp/agent9527-home/app-server-control/app-server- │
│                    control.sock (v0.133.0)                                   │
│                                                                              │
│  Model:            gpt-5.1-agent9527-max (reasoning medium, summaries auto)  │
│  Directory: [[workspace]]                                                    │
│  Permissions:      Custom (workspace with network access, Ask for approval)  │
│  Agents.md:        <none>                                                    │
│                                                                              │
│  Token usage:      750 total  (500 input + 250 output)                       │
│  Context window:   100% left (750 used / 272K)                               │
│  Limits:           data not available yet                                    │
╰──────────────────────────────────────────────────────────────────────────────╯
